--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,7 +35,7 @@
             android:maxWidth="100dp"
             android:scaleType="center"
             android:adjustViewBounds="true"
-            android:src=""
+            android:src="@drawable/dice0"
             />
 
         <ImageView
@@ -46,7 +46,7 @@
             android:maxWidth="100dp"
             android:scaleType="center"
             android:adjustViewBounds="true"
-            android:src=""
+            android:src="@drawable/dice0"
             />
 
     </LinearLayout>
