--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -61,7 +61,13 @@
 
     </LinearLayout>
 
-
+    <NumberPicker
+        android:id="@+id/numberPicker"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/bnHistory"
+        android:layout_alignParentRight="true"
+        android:layout_marginTop="491dp" />
 
     <Button
         android:id="@+id/btnRoll"
