--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,6 +26,8 @@
         android:text="History"
         />
 
+
+
     <LinearLayout
         android:id="@+id/dicebord"
         android:layout_width="wrap_content"
@@ -33,30 +35,17 @@
         android:layout_marginTop="56dp"
         android:layout_centerHorizontal="true"
         android:background="@color/dicebord"
-        android:orientation="horizontal">
-
-
-        <ImageView
-            android:id="@+id/imgDice1"
+        android:orientation="horizontal"
+        >
+        <GridLayout
+            android:background="@color/purple_200"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="20dp"
-            android:adjustViewBounds="true"
-            android:maxWidth="100dp"
-            android:scaleType="center"
-            android:src="@drawable/dice0" />
+            android:layout_gravity="center" android:rowCount="2"
+            android:columnCount="3" android:id="@+id/grid">
+        </GridLayout>
 
-        <ImageView
-            android:id="@+id/imgDice2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="20dp"
-            android:adjustViewBounds="true"
-            android:maxWidth="100dp"
-            android:scaleType="center"
-            android:src="@drawable/dice0"
 
-            />
 
 
     </LinearLayout>
