--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -6,13 +6,22 @@
     android:layout_height="match_parent"
     tools:context=".History">
 
+    <TextView
+        android:id="@+id/tvTimeStamp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:text="time"
+        android:textSize="20dp"
+
+        />
 
     <TextView
         android:id="@+id/tvHisory"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/dicebord"
-        android:layout_centerHorizontal="true"
+        android:layout_alignParentRight="true"
         android:text="History"
         android:textSize="20dp" />
 
