--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -6,24 +6,39 @@
     android:layout_height="match_parent"
     tools:context=".History">
 
-    <TextView
-        android:id="@+id/tvTimeStamp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:text="time"
-        android:textSize="20dp"
+    <ScrollView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/root_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-        />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/tvHisory"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/dicebord"
-        android:layout_alignParentRight="true"
-        android:text="History"
-        android:textSize="20dp" />
+            <TextView
+                android:id="@+id/tvTimeStamp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:text="time"
+                android:textSize="20dp"
+            />
+
+            <TextView
+                android:id="@+id/tvHisory"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/dicebord"
+                android:layout_alignParentRight="true"
+                android:text="History"
+                android:textSize="20dp"
+            />
+
+        </LinearLayout>
+    </ScrollView>
 
     <Button
         android:layout_width="wrap_content"
